#dev - dodanie materialow + refaktoring

--- a/SeeSharp/SeeSharp.BOL/Resources/AppSettings.resx
+++ b/SeeSharp/SeeSharp.BOL/Resources/AppSettings.resx
@@ -149,7 +149,7 @@ namespace HelloWorld
     <value>{0} %</value>
   </data>
   <data name="ProgramFilesDirectory" xml:space="preserve">
-    <value>/Content/Samples/{0}.txt</value>
+    <value>Content\Samples\{0}.txt</value>
   </data>
   <data name="RandomText" xml:space="preserve">
     <value>Przejrzystość nowym ledwo Worończańskim osoby przez zwierciadlanéj. Pokrewieństwem najwymowniejsza jezior orzeł zwierciadlanéj Wystrzeliliśmy Lubił przejrzystość Przedstawiając Majora młoda. Najpiękniejszym żołniersczyzny Niesiołowskiemu wola tace nierostrzygniony syna moje Kościuszkowskie. Bębna Podkomorzym mgłą ciżby czasie pewnością można przysłowie powiatowém uszaki bitwie. Uprzyjemnić cicha cudna śnie Przed szlacheckich najwyższych zdradzieckim ręka. Zdał Kulturze Brał kawiarka czernił dziwo oboje Gdzie faworyty tyłu. 
