--- a/SeeSharp/SeeSharp.BOL/Resources/Page.resx
+++ b/SeeSharp/SeeSharp.BOL/Resources/Page.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="FileNotAvaliable" xml:space="preserve">
+    <value>Program do tego modułu jest niedostępny.</value>
+  </data>
   <data name="SuccesfullRegisterMessagePattern" xml:space="preserve">
     <value>Pomyślnie zarejestrowano konto o loginie {0}! {1}Twój kod rejestracyjny to: {2}</value>
   </data>
